--- a/Julfiker_Portfolio/appsettings.json
+++ b/Julfiker_Portfolio/appsettings.json
@@ -1,9 +1,12 @@
-{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+"Email": {
+  "Host": "smtp.office365.com",
+  "Port": 587,
+  "UseSsl": false,                          // StartTLS on 587
+  "User": "mjewel@wvstateu.edu",
+  "Password": "<YOUR_M365_PASSWORD_OR_APP_PASSWORD>",
+
+  "FromEmail": "mjewel@wvstateu.edu",
+  "FromName": "Portfolio Contact",
+  "ToEmail": "mjewel@wvstateu.edu",
+  "ToName": "Md Julfiker Ali Jewel"
 }
