--- a/Julfiker_Portfolio/appsettings.json
+++ b/Julfiker_Portfolio/appsettings.json
@@ -1,7 +1,7 @@
 "Email": {
   "Host": "smtp.office365.com",
   "Port": 587,
-  "UseSsl": false,                          // StartTLS on 587
+  "UseSsl": false,                          
   "User": "mjewel@wvstateu.edu",
   "Password": "<YOUR_M365_PASSWORD_OR_APP_PASSWORD>",
 
