--- a/Julfiker_Portfolio/appsettings.json
+++ b/Julfiker_Portfolio/appsettings.json
@@ -1,12 +1,20 @@
-"Email": {
-  "Host": "smtp.office365.com",
-  "Port": 587,
-  "UseSsl": false,                          
-  "User": "mjewel@wvstateu.edu",
-  "Password": "<YOUR_M365_PASSWORD_OR_APP_PASSWORD>",
-
-  "FromEmail": "mjewel@wvstateu.edu",
-  "FromName": "Portfolio Contact",
-  "ToEmail": "mjewel@wvstateu.edu",
-  "ToName": "Md Julfiker Ali Jewel"
+{
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
+  "Email": {
+    "Host": "smtp.office365.com",
+    "Port": 587,
+    "UseSsl": false,
+    "User": "mjewel@wvstateu.edu",
+    "Password": "<SET_VIA_ENV>",
+    "FromEmail": "mjewel@wvstateu.edu",
+    "FromName": "Portfolio Contact",
+    "ToEmail": "mjewel@wvstateu.edu",
+    "ToName": "Md Julfiker Ali Jewel"
+  }
 }
