Update appsettings.json with email and analytics
Added email configuration and analytics settings.

--- a/Julfiker_Portfolio/appsettings.json
+++ b/Julfiker_Portfolio/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "AllowedHosts": "*",
+
   "Email": {
     "Host": "smtp.office365.com",
     "Port": 587,
@@ -16,5 +17,16 @@
     "FromName": "Portfolio Contact",
     "ToEmail": "mjewel@wvstateu.edu",
     "ToName": "Md Julfiker Ali Jewel"
+  },
+
+  "Analytics": {
+    // Generate a long random string; change this value!
+    "IpHashSalt": "REPLACE_WITH_A_LONG_RANDOM_STRING",
+    // If true, logs bots too. Keep false for clean stats.
+    "TrackBots": false,
+    // Basic self-noise controls
+    "ExcludePaths": [ "/analytics", "/admin", "/health" ],
+    // Skip static file extensions (extra safety; middleware already guards this)
+    "StaticExtensions": [ ".css", ".js", ".png", ".jpg", ".jpeg", ".gif", ".svg", ".webp", ".ico", ".woff", ".woff2", ".ttf", ".eot", ".map", ".pdf", ".txt", ".xml", ".json", ".csv" ]
   }
 }
