Add connection string and update analytics settings

--- a/Julfiker_Portfolio/appsettings.json
+++ b/Julfiker_Portfolio/appsettings.json
@@ -19,14 +19,18 @@
     "ToName": "Md Julfiker Ali Jewel"
   },
 
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=appdata.db"
+  },
+
   "Analytics": {
-    // Generate a long random string; change this value!
-    "IpHashSalt": "REPLACE_WITH_A_LONG_RANDOM_STRING",
-    // If true, logs bots too. Keep false for clean stats.
+    "IpHashSalt": "CHANGE_THIS_TO_A_LONG_RANDOM_STRING",
     "TrackBots": false,
-    // Basic self-noise controls
     "ExcludePaths": [ "/analytics", "/admin", "/health" ],
-    // Skip static file extensions (extra safety; middleware already guards this)
-    "StaticExtensions": [ ".css", ".js", ".png", ".jpg", ".jpeg", ".gif", ".svg", ".webp", ".ico", ".woff", ".woff2", ".ttf", ".eot", ".map", ".pdf", ".txt", ".xml", ".json", ".csv" ]
+    "StaticExtensions": [
+      ".css", ".js", ".png", ".jpg", ".jpeg", ".gif", ".svg", ".webp",
+      ".ico", ".woff", ".woff2", ".ttf", ".eot", ".map", ".pdf",
+      ".txt", ".xml", ".json", ".csv"
+    ]
   }
 }
