--- a/Julfiker_Portfolio/appsettings.json
+++ b/Julfiker_Portfolio/appsettings.json
@@ -11,11 +11,11 @@
     "Host": "smtp.office365.com",
     "Port": 587,
     "UseSsl": false,
-    "User": "mjewel@wvstateu.edu",
+    "User": "jewelshaikh.ios@gmail.com",
     "Password": "<SET_VIA_ENV>",
-    "FromEmail": "mjewel@wvstateu.edu",
+    "FromEmail": "jewelshaikh.ios@gmail.com",
     "FromName": "Portfolio Contact",
-    "ToEmail": "mjewel@wvstateu.edu",
+    "ToEmail": "jewelshaikh.ios@gmail.com",
     "ToName": "Md Julfiker Ali Jewel"
   },
 
@@ -32,5 +32,9 @@
       ".ico", ".woff", ".woff2", ".ttf", ".eot", ".map", ".pdf",
       ".txt", ".xml", ".json", ".csv"
     ]
+  },
+
+  "Admin": {
+    "AnalyticsKey": "CHANGE_THIS_TO_ANOTHER_RANDOM_STRING"
   }
 }
