--- a/Julfiker_Portfolio/Julfiker_Portfolio.csproj
+++ b/Julfiker_Portfolio/Julfiker_Portfolio.csproj
@@ -6,13 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
-  <!-- Packages -->
   <ItemGroup>
-    <!-- Existing -->
+    <!-- Your existing email packages -->
     <PackageReference Include="MailKit" Version="4.11.0" />
     <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
 
-    <!-- NEW: EF Core for .NET 8 -->
+    <!-- EF Core for .NET 8 -->
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0">
@@ -21,7 +20,6 @@
     </PackageReference>
   </ItemGroup>
 
-  <!-- keep your static files folder hint -->
   <ItemGroup>
     <Folder Include="wwwroot\files\" />
   </ItemGroup>
