Update email configuration in appsettings.json

--- a/Julfiker_Portfolio/appsettings.json
+++ b/Julfiker_Portfolio/appsettings.json
@@ -11,11 +11,11 @@
     "Host": "smtp.office365.com",
     "Port": 587,
     "UseSsl": false,
-    "User": "jewelshaikh.ios@gmail.com",
+    "User": "mjewel@wvstateu.edu",
     "Password": "<SET_VIA_ENV>",
-    "FromEmail": "jewelshaikh.ios@gmail.com",
+    "FromEmail": "mjewel@wvstateu.edu",
     "FromName": "Portfolio Contact",
-    "ToEmail": "jewelshaikh.ios@gmail.com",
+    "ToEmail": "mjewel@wvstateu.edu",
     "ToName": "Md Julfiker Ali Jewel"
   },
 
