Update AnalyticsKey in appsettings.json

--- a/Julfiker_Portfolio/appsettings.json
+++ b/Julfiker_Portfolio/appsettings.json
@@ -34,7 +34,7 @@
     ]
   },
 
-  "Admin": {
-    "AnalyticsKey": "CHANGE_THIS_TO_ANOTHER_RANDOM_STRING"
+"Admin": { "AnalyticsKey": "YOUR_LONG_RANDOM_STRING" }
+
   }
 }
