Update appsettings.json with connection strings and secrets

--- a/Julfiker_Portfolio/appsettings.json
+++ b/Julfiker_Portfolio/appsettings.json
@@ -7,6 +7,10 @@
   },
   "AllowedHosts": "*",
 
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=appdata.db"
+  },
+
   "Email": {
     "Host": "smtp.office365.com",
     "Port": 587,
@@ -19,12 +23,8 @@
     "ToName": "Md Julfiker Ali Jewel"
   },
 
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=appdata.db"
-  },
-
   "Analytics": {
-    "IpHashSalt": "CHANGE_THIS_TO_A_LONG_RANDOM_STRING",
+    "IpHashSalt": "REPLACE_WITH_A_LONG_RANDOM_STRING",
     "TrackBots": false,
     "ExcludePaths": [ "/analytics", "/admin", "/health" ],
     "StaticExtensions": [
@@ -34,7 +34,7 @@
     ]
   },
 
-"Admin": { "AnalyticsKey": "YOUR_LONG_RANDOM_STRING" }
-
+  "Admin": {
+    "AnalyticsKey": "REPLACE_WITH_ANOTHER_RANDOM_SECRET"
   }
 }
