Update analytics configuration in appsettings.json

--- a/Julfiker_Portfolio/appsettings.json
+++ b/Julfiker_Portfolio/appsettings.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
@@ -24,7 +25,8 @@
   },
 
   "Analytics": {
-    "IpHashSalt": "REPLACE_WITH_A_LONG_RANDOM_STRING",
+    "Enabled": true,
+    "IpHashSalt": "CHANGE_THIS_TO_A_64_CHAR_RANDOM_STRING",
     "TrackBots": false,
     "ExcludePaths": [ "/analytics", "/admin", "/health" ],
     "StaticExtensions": [
@@ -35,6 +37,6 @@
   },
 
   "Admin": {
-    "AnalyticsKey": "mjaj_super_secret_72472047"
+    "AnalyticsKey": "mjaj_cyber_hunter_72472047"
   }
 }
